--- a/frontend/eBookAI/src/index.css
+++ b/frontend/eBookAI/src/index.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+@import url("https://fonts.googleapis.com/css2?family=SN+Pro:ital,wght@0,200..900;1,200..900&display=swap");
+
+
+@theme {
+    --font-sans: "SN Pro", system-ui, -apple-system, sans-serif;
+    --breakpoint-3xl: 1920px;
+    --color-primary: #ff9324;
+}
+@layer base{
+    html{
+        font-family: var(--font-sans);
+    }
+    body{
+        background-color: beige;
+    }
+}
